error.txt
PS C:\temp\income_tax_bot> .\1_parse.py
  File "C:\temp\income_tax_bot\1_parse.py", line 60
    Chalao: python 1_parse.py
                    ^
SyntaxError: invalid decimal literal
PS C:\temp\income_tax_bot> .\2_chatbot.py
Traceback (most recent call last):
  File "C:\temp\income_tax_bot\2_chatbot.py", line 13, in <module>
    with open("sections.json", "r", encoding="utf-8") as f:
         ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: 'sections.json'


PS C:\temp\income_tax_bot> .\1_parse.py
✅ Loaded 170 sections
=======================================================
💼 Income Tax Act Chatbot (New 2025 + Old 1961)
Type 'quit' to exit
=======================================================

❓ Aapka sawaal: quit
Bye! 👋
PS C:\temp\income_tax_bot> .\2_chatbot.py
==================================================
💼 Income Tax Act Chatbot (New 2025 + Old 1961)
Type 'quit' to exit
==================================================

❓ Aapka sawaal: section 17 prequisite

🤖 Nemotron: Given sections mein ye info nahi mili. Provided context mein Section 17 (Perquisites) ka koi mention nahi hai. Sirf Sections 33B, 34, 31, 32, aur 80CC (Old Act 1961) diye gaye hain.
❌ Error: list index out of range

❓ Aapka sawaal:


Get-Content .\1_parse.py -TotalCount 3
import json
import re
from openai import OpenAI


python -c "import json; d=json.load(open('sections.json',encoding='utf-8')); print([s['section'] for s in d if s['section']=='17'])"  

python -c "import json; d=json.load(open('sections.json',encoding='utf-8')); print([s['section'] for s in d if s['section']=='17'])"
['17', '17']


 python.exe 2_chatbot.py
✅ Loaded 343 sections
============================================================
💼 Income Tax AI — Chapter + Section + Compare + Opinion 🧠
   New Act 2025  vs  Old Act 1961
   Examples:
     • chapter 4 ke baare mein batao
     • 80C aur 80CCD ke naye act mein changes
     • new aur old act mein kaunsa better hai?
     • section 17 explain karo
   Type 'quit' to exit
============================================================

❓ Sawaal: new income tax act mein kya hai
🔎 Found: [New] Sec 67, [New] Sec 92, [Old] Sec 56

❌ API Error: Error code: 400 - {'error': {'message': "reasoning_effort=low is not support by Mistral models. Only 'high' and 'none' are.", 'type': 'BadRequestError', 'param': None, 
'code': 400}}


az webapp config set \  
  --resource-group rg-terraform-state \  
  --name my-taxai-app \  
  --startup-file "gunicorn -w 2 -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:8000"  

az webapp config appsettings set \  
  --resource-group rg-terraform-state \  
  --name my-taxai-app \  
  --settings NVIDIA_API_KEY="nvapi-YOUR-REAL-KEY" \  
             SCM_DO_BUILD_DURING_DEPLOYMENT=true \  
             WEBSITES_PORT=8000  

# Pehle zip banao (Windows PowerShell)  
Compress-Archive -Path * -DestinationPath deploy.zip -Force  
  
# Ya Linux/Mac  
zip -r deploy.zip . -x "*.git*" "*.venv*" "__pycache__/*"  

az webapp deploy \  
  --resource-group rg-terraform-state \  
  --name my-taxai-app \  
  --src-path deploy.zip \  
  --type zip  

